// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders cells for passed empty field 1`] = `
.emotion-4 {
  display: block;
  padding: 10px;
  border: 2px solid lightgray;
  margin-bottom: 10px;
}

.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 1px;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  line-heigts: 0.8;
  background-color: #fff;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Field renders filled cells snapshot check 1`] = `
.emotion-4 {
  display: block;
  padding: 10px;
  border: 2px solid lightgray;
  margin-bottom: 10px;
}

.emotion-3 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 1px;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  line-heigts: 0.8;
  background-color: #fff;
}

.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 1px;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  line-heigts: 0.8;
  background-color: #00ff00;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    x
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <button
    className="emotion-3"
    onClick={[Function]}
  >
    
  </button>
</div>
`;
